# project_templates

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/docs/: README.md
{{ cookiecutter.repo_name }}/docs/source/: conf.py  index.md
{{ cookiecutter.repo_name }}/docs/source/notebooks/: usage.ipynb
